objects/ASI_CRM_PROS_OutPriCon__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Image_Level_Name__c</fullName>
        <formula>TEXT( ASI_CRM_Image_Level__r.ASI_CRM_SG_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Level Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Image_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image Level</label>
        <referenceTo>ASI_CRM_Image_Level__c</referenceTo>
        <relationshipLabel>PROS Outlet Prioritization Condition</relationshipLabel>
        <relationshipName>Outlet_Prioritization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Outlet_Prioritization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Prioritization</label>
        <referenceTo>ASI_CRM_PROS_OutletPrioritization__c</referenceTo>
        <relationshipLabel>PROS Outlet Prioritization Condition</relationshipLabel>
        <relationshipName>PROS_Outlet_Prioritization_Condition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Type_Name__c</fullName>
        <formula>ASI_CRM_Outlet_Type__r.ASI_CRM_SG_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Type</label>
        <referenceTo>ASI_CRM_Outlet_Type__c</referenceTo>
        <relationshipLabel>PROS Outlet Prioritization Condition</relationshipLabel>
        <relationshipName>Outlet_Prioritization</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PROS Outlet Prioritization Condition</label>
    <listViews>
        <fullName>ASI_CRM_MY_PROS_Outlet_Prioritization_Condition</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Image_Level_Name__c</columns>
        <columns>ASI_CRM_Outlet_Type_Name__c</columns>
        <columns>ASI_CRM_Image_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_PROS_OutPriCon__c.ASI_CRM_MY_Outlet_Prioritization</value>
        </filters>
        <label>MY PROS Outlet Prioritization Condition</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_MY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROS Outlet Prioritization Condition</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Outlet_Prioritization</fullName>
        <active>true</active>
        <label>ASI CRM MY Outlet Prioritization</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>